--- a/styles/header.css
+++ b/styles/header.css
@@ -1,6 +1,10 @@
 .header {
-  background-color: rgb(0, 0, 56);
-  height: 60px;
+  background-image: linear-gradient(
+    to bottom right,
+    rgba(0, 0, 56, 150),
+    rgba(0, 0, 140, 150)
+  );
+  height: 80px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -22,7 +26,8 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
+  align-items: stretch;
+  height: 100%;
 }
 .home-button,
 .projects-button,
@@ -36,7 +41,7 @@
   align-items: center;
   flex: 1;
   border: none;
-  height: 60px;
+  height: 100%;
   cursor: pointer;
   transition:
     color 0.3s,
