--- a/styles/header.css
+++ b/styles/header.css
@@ -9,7 +9,7 @@
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
-  position: fixed;
+  position: sticky;
   top: 0;
   left: 0;
   right: 0;
